other/k8s/hpa-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: demo
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:5-apache
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - name: index-volume
            mountPath: /var/www/html/
      volumes:
        - name: index-volume
          configMap:
            name: php-config
            items:
            - key: index.php
              path: index.php


---

apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: demo
  labels:
    app: php
spec:
  selector:
    app: php
  ports:
  - port: 80
    nodePort: 31080
    name: http
    targetPort: 80
  type: NodePort
