other/k8s/np.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: demo
  name: allow-ingess-inside-namespace
spec:
  podSelector:
    matchLabels:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: demo
  name: allow-ingess-from-outside
spec:
  podSelector:
    matchLabels:
      access: external
  policyTypes:
  - Ingress
  ingress:
  - {}
